[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rossum_api"
version = "3.3.0"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "aiofiles",
    # The code uses the "case conversion" feature added in this version.
    # See deserialize_default function in models/__init__.py.
    "dacite>=1.9.0",
    "inflect",
    "httpx",
    "inflect",
    "tenacity",
]

[project.optional-dependencies]
tests = [
  "codecov",
  "pytest",
  "pytest-asyncio",
  "pytest-httpx>=0.34.0",
  "pytest-cov",
  "ruff",
  "types-aiofiles",
  "pre-commit",
]

[tools.setuptools]
include-package-data = true
packages = ["find"]

[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = [
  "."
]

[tool.semantic_release]
upload_to_repository = false
branch = "main"
version_variables = ["rossum_api/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version"]
