[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rossum_api"
version = "3.6.1"
license = {text = "MIT"}
readme = "README.rst"
description = "Python API client for the Rossum platform."
requires-python = ">= 3.10"
dependencies = [
    "aiofiles",
    # The code uses the "case conversion" feature added in this version.
    # See deserialize_default function in models/__init__.py.
    "dacite>=1.9.0",
    "httpx",
    "tenacity",
]

[project.optional-dependencies]
tests = [
  "codecov",
  "pytest",
  "pytest-asyncio",
  "pytest-httpx>=0.34.0",
  "pytest-cov",
  "ruff",
  "types-aiofiles",
  "pre-commit",
]
docs = [
  "sphinx>=8.2",  # python >= 3.11 is required for docs generation
  "sphinx-rtd-theme",
  "sphinx-autodoc-typehints",
]

[tools.setuptools]
include-package-data = true
packages = ["find"]

[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = [
  "."
]

[tool.mypy]
python_version = "3.10"
files = ["rossum_api/"]

show_error_codes = true
disallow_untyped_defs = true
follow_imports = "skip"
warn_return_any = true
namespace_packages = true

disable_error_code = ["operator", "index", "var-annotated"]

[tool.semantic_release]
upload_to_repository = false
branch = "main"
version_variables = ["rossum_api/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version"]

[tool.semantic_release.changelog]
mode = "init"  # temporary fix to re-generate correctly full Changelog
