[metadata]
name = rossum_ng
description_file = README.md
url = https://github.com/rossumai/rossum-sdk
license = proprietary

[options]
packages = find:
include_package_data = True
install_requires =
    httpx==0.23.0

[options.extras_require]
tests =
    pytest==7.1.0
    pytest-asyncio==0.18.3
    pytest-httpx==0.21.0
