[metadata]
name = rossum_ng
description_file = README.md
url = https://github.com/rossumai/rossum-sdk
license = proprietary

[options]
packages = find:
include_package_data = True
install_requires =
    aiofiles==0.8.0
    httpx==0.23.0

[options.extras_require]
tests =
    mock==4.0.3 # Needed for Python 3.7  because unittest.mock there doesn't support AsyncMock
    pytest==7.1.0
    pytest-asyncio==0.18.3
    pytest-httpx==0.21.0
    pytest-cov==3.0.0
    types-aiofiles==0.8.8
